fix links contacts

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
       <div class="contacts-tab" id="contactsToggle">📩</div>
       <div class="contacts-content" id="contactsContent">
         <h3>Here are ways you can contact me!</h3>
-        <a href="github.com/ElysiumREV">Github</a>
-        <a href="linkedin.com/ElysiumREV">LinkedIn</a>
+        <a href="https://github.com/ElysiumREV" target="_blank">Github</a>
+        <a href="https://br.linkedin.com/in/elysiumrev" target="_blank">LinkedIn</a>
         <div class="emailContainer">
           <button id="copyEmail">📋 Copy Email</button>
           <a href="mailto:justomelone@gmail.com" class="emailLink">📧 Send Email</a>
