--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link href="/src/style.css" rel="stylesheet"/>
+  <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div class="pfpImg">
-        <img src="/src/images/powerPfp_256x256.png" alt="power csm">
+        <img src="/images/powerPfp_256x256.png" alt="power csm">
       </div>
     </div>
 
@@ -51,6 +51,6 @@
     
     <div id="notification" class="notification">Email copied to clipboard!</div>
 
-    <script src="/src/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
