--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div class="pfpImg">
-        <img src="/images/powerPfp_256x256.png" alt="power csm">
+        <img src="images/powerPfp_256x256.png" alt="power csm">
       </div>
     </div>
 
@@ -51,6 +51,6 @@
     
     <div id="notification" class="notification">Email copied to clipboard!</div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
