Update on friends/footer - some fixes on css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       </div>
     </div>
     
+    <footer>
+      <a href="https://moonlitrevery.github.io/portfolio">
+        <img title="elysiumrev" src="images/88x31_elysiumrev.png">
+        <img title="moonlitrevery portfolio" src="images/88x31_moonlitrevery.png">
+      </a>
+    </footer>
+
     <div id="notification" class="notification">Email copied to clipboard!</div>
 
     <script src="script.js"></script>
