--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     </div>
     
     <footer>
-      <a href="https://moonlitrevery.github.io/portfolio">
+      <a href="https://elysiumrev.github.io/portfolio/">
         <img title="elysiumrev" src="images/88x31_elysiumrev.png">
+      </a>
+      <a href="https://moonlitrevery.github.io/portfolio">
         <img title="moonlitrevery portfolio" src="images/88x31_moonlitrevery.png">
       </a>
     </footer>
